Copyright and release.
Signed-off-by: dvidal <dvidal@infoyupay.com>